# llama.cpp

common/: chat-peg-parser.cpp  chat.cpp  speculative.cpp
conversion/: __init__.py  base.py  inkling.py  qwen.py
ggml/: CMakeLists.txt
ggml/include/: ggml-rpc.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-backend-meta.cpp  ggml-common.h  ggml-quants-iqk.cpp  ggml-quants-iqk.h  ggml-quants.c  ggml.c  gguf.cpp
ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h
ggml/src/ggml-cuda/: argsort.cu  common.cuh  convert.cu  convert.cuh  dsv4-hc.cu  dsv4-hc.cuh  fattn-banded.cu  fattn-banded.cuh  fattn-common.cuh  fattn-mma-f16.cuh  fattn.cu  ggml-cuda.cu  mmf.cuh  mmq.cuh  mmvf.cu  mmvq.cu  pad.cu  sinkhorn-norm.cu  sinkhorn-norm.cuh  ssm-conv.cu  vecdotq.cuh
ggml/src/ggml-metal/: CMakeLists.txt  ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.metal
ggml/src/ggml-metal/kernels/: argsort.metal  binbcast.metal  common.h  conv.metal  dequantize.h  fa.metal  gated_delta_net.metal  misc.metal  mul_mm.metal  mul_mv.metal  norm.metal  pool.metal  quantize.h  quantize.metal  reduce.metal  rope.metal  softmax.metal  solve_tri.metal  ssm.metal  tri.metal  unary.metal  upscale.metal  wkv.metal
ggml/src/ggml-rpc/: ggml-rpc.cpp
gguf-py/gguf/: constants.py  gguf_reader.py  quants.py  tensor_mapping.py
include/: llama.h
models/templates/: Inkling.jinja
src/: llama-arch.cpp  llama-arch.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-model-loader.cpp  llama-model-saver.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-vocab.cpp  llama-vocab.h
src/models/: deepseek2.cpp  deepseek4.cpp  dflash.cpp  glm-dsa.cpp  inkling.cpp  kimi-linear.cpp  models.h
tests/: CMakeLists.txt  test-backend-ops.cpp  test-chat.cpp  test-flash-attn-bias.cpp  test-flash-attn-generic-hash.cpp  test-llama-archs.cpp  test-quantize-fns.cpp
tools/mtmd/: CMakeLists.txt  clip-impl.h  clip-model.h  clip.cpp  mtmd-audio.cpp  mtmd-audio.h  mtmd-image.cpp  mtmd-image.h  mtmd.cpp
tools/mtmd/models/: inkling.cpp  models.h
tools/quantize/: quantize.cpp
